--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-body { margin:0; }
+html {
+    height: 100%;
+}
+body { margin:0;   padding: 0;    ;height: 100vh;}
